--- a/go-server/client/src/index.css
+++ b/go-server/client/src/index.css
@@ -6,5 +6,10 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   color-scheme: light dark;
-  @apply bg-neutral-900 text-white;
+  @apply bg-c-grey text-black;
+}
+
+.full-bleed {
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
 }
